tests/final/expect/15__diag__malformed_macro_arity_no_crash.diag
Diagnostics:
/Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/cases/15__diag__malformed_macro_arity_no_crash.c:4:13: error: macro 'BINARY_ADD' requires 2 argument(s), got 1
Error: preprocessing failed
/Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/cases/15__diag__malformed_macro_arity_no_crash.c:4:13: error: macro 'BINARY_ADD' requires 2 argument(s), got 1
/Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/cases/15__diag__malformed_macro_arity_no_crash.c:4:13: error: macro 'BINARY_ADD' requires 2 argument(s), got 1
